[gd_scene load_steps=2 format=3 uid="uid://b70ab8funi82r"]

[ext_resource type="Script" path="res://addons/project_file_search/search_panel.gd" id="1_eqmk8"]

[node name="SearchPanel" type="PopupPanel"]
initial_position = 1
size = Vector2i(640, 480)
visible = true
transient_to_focused = true
script = ExtResource("1_eqmk8")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 624.0
offset_bottom = 464.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "File Search"

[node name="SearchBox" type="TextEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
placeholder_text = "Search files by name..."
scroll_fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="SearchResultsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="MarginContainer/VBoxContainer/SearchBox" to="." method="_on_search_box_text_changed"]
